--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "client": "node client.js 127.0.0.1 5050"
   },
   "dependencies": {
-    "express": "^4.16.3",
-    "prompt-sync": "^4.1.6",
+    "readcommand": "^0.3.0",
     "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.0"
   },
